<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center"
    android:layout_marginTop="48dp"
    android:padding="@dimen/activity_horizontal_margin"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/card_background"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/textPrimary"
            android:text="@string/authenticate"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textPrimary"
            android:textColorHighlight="@color/textPrimary"
            android:textColorHint="@color/textPrimary"
            android:textColorLink="@color/textPrimary" />

        <TextView
            android:id="@+id/permissionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/textPrimary"
            android:text="@string/location_permissions_required"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/textPrimary"
            android:textColorHighlight="@color/textPrimary"
            android:textColorHint="@color/textPrimary"
            android:textColorLink="@color/textPrimary"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/transport_id"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/permissionText"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/textPrimary"
            android:hint="@string/enter_rota_id"
            android:maxLines="1"
            android:textColor="@color/textPrimary"
            android:textColorHighlight="@color/textPrimary"
            android:textColorHint="#13A3F9" />

        <EditText
            android:id="@+id/email"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/transport_id"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/textPrimary"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/textPrimary"
            android:textColorHighlight="@color/textPrimary"
            android:textColorHint="#13A3F9" />

        <EditText
            android:id="@+id/password"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/textPrimary"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/textPrimary"
            android:textColorHighlight="@color/textPrimary"
            android:textColorHint="#13A3F9" />

        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/login" />

    </RelativeLayout>
</android.support.v7.widget.CardView>